# web-resume-rust

./: .gitignore  Cargo.toml
.cdk/: cdk.context.json  cdk.json  package-lock.json  package.json
.cdk/lib/: .cdk-stack.ts  bucket.ts  certificate.ts  distribution.ts  zone.ts
src/: main.rs
src/components/: home.rs
src/templates/: index.rs
static/: main.css
